--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   go_router: ^14.1.1
   json_annotation: ^4.9.0
   provider: ^6.1.2
+  firebase_core: ^2.31.0
+  firebase: ^9.0.3
 
 dev_dependencies:
   flutter_test:
