--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   provider: ^6.1.2
   firebase_core: ^2.31.0
   firebase: ^9.0.3
+  url_strategy: ^0.2.0
 
 dev_dependencies:
   flutter_test:
