--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   firebase_core: ^2.31.0
   firebase: ^9.0.3
   url_strategy: ^0.2.0
+  printing: ^5.12.0
+  pdf: ^3.10.8
 
 dev_dependencies:
   flutter_test:
