--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   printing: ^5.12.0
   pdf: ^3.10.8
   intl: ^0.19.0
+  mask_text_input_formatter: ^2.9.0
 
 dev_dependencies:
   flutter_test:
