--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,17 +36,20 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
-  supabase_flutter: ^2.5.3
+
   go_router: ^14.1.1
   json_annotation: ^4.9.0
   provider: ^6.1.2
-  firebase_core: ^2.31.0
+  firebase_core: ^2.31.1
   firebase: ^9.0.3
   url_strategy: ^0.2.0
   printing: ^5.12.0
   pdf: ^3.10.8
   intl: ^0.19.0
   mask_text_input_formatter: ^2.9.0
+  cloud_firestore: ^4.17.4
+  firebase_database: ^10.5.6
+  firebase_auth: ^4.19.6
 
 dev_dependencies:
   flutter_test:
